# ehdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ehdb-catalog/: Cargo.toml
crates/ehdb-catalog/benches/: snapshots.rs
crates/ehdb-catalog/src/: lib.rs
crates/ehdb-core/: Cargo.toml
crates/ehdb-core/src/: lib.rs
crates/ehdb-feed/: Cargo.toml
crates/ehdb-feed/src/: claim.rs  group.rs  lib.rs  publish.rs  scaler.rs  sse.rs  subject.rs
crates/ehdb-feed/tests/: claim.rs  group.rs  inprocess.rs  latency.rs  publish.rs  scaler.rs  sse.rs
crates/ehdb-l0/: Cargo.toml
crates/ehdb-l0/examples/: l0_selfcheck.rs
crates/ehdb-l0/src/: blob.rs  bloom.rs  catalog.rs  columnar.rs  command_queue.rs  dataset.rs  engine.rs  feed.rs  frame.rs  kv.rs  lib.rs  merge.rs  metrics.rs  object_store.rs  part.rs  projection.rs  provider.rs  registry.rs  retention.rs  runtime.rs  substrate.rs  vector.rs  wasm.rs
crates/ehdb-l0/tests/: blob.rs  columnar.rs  command_queue.rs  feed.rs  generic_dataset.rs  inverted_index.rs  kv.rs  merge.rs  nway_replication.rs  projection.rs  provider.rs  registry.rs  retention.rs  roundtrip.rs  runtime.rs  vector.rs  wasm.rs
crates/ehdb-reference/: Cargo.toml
crates/ehdb-reference/benches/: engine_micro.rs  local_runtime.rs
crates/ehdb-reference/src/: affinity.rs  backends.rs  durable_eventlog.rs  durable_eventlog_affinity.rs  durable_eventlog_shared.rs  eventlog.rs  kv.rs  lib.rs  object.rs  projection.rs  vector.rs
crates/ehdb-reference/tests/: noetl_runtime_surface.rs
crates/ehdb-retrieval/: Cargo.toml
crates/ehdb-retrieval/src/: lib.rs
crates/ehdb-service/: Cargo.toml
crates/ehdb-service/benches/: local_scan_service.rs
crates/ehdb-service/src/: flight_sql.rs  lib.rs
crates/ehdb-storage/: Cargo.toml
crates/ehdb-storage/benches/: local_store.rs
crates/ehdb-storage/src/: lib.rs
crates/ehdb-stream/: Cargo.toml
crates/ehdb-stream/src/: lib.rs
crates/ehdb-system/: Cargo.toml
crates/ehdb-system/src/: lib.rs
crates/ehdb-transaction/: Cargo.toml
crates/ehdb-transaction/benches/: reference_models.rs
crates/ehdb-transaction/src/: lib.rs
crates/ehdb-transaction/tests/: noetl_surface.rs
scripts/perf/: layer_b_eventlog_load.sh
