[workspace]
members = [
    "crates/ehdb-catalog",
    "crates/ehdb-core",
    "crates/ehdb-retrieval",
    "crates/ehdb-storage",
    "crates/ehdb-stream",
    "crates/ehdb-transaction",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noetl/ehdb"
rust-version = "1.82"

[workspace.dependencies]
arrow-schema = "53"
criterion = "0.5"
ehdb-catalog = { path = "crates/ehdb-catalog" }
ehdb-core = { path = "crates/ehdb-core" }
ehdb-retrieval = { path = "crates/ehdb-retrieval" }
ehdb-stream = { path = "crates/ehdb-stream" }
ehdb-transaction = { path = "crates/ehdb-transaction" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
