[workspace]
members = [
    "crates/ehdb-catalog",
    "crates/ehdb-core",
    "crates/ehdb-reference",
    "crates/ehdb-retrieval",
    "crates/ehdb-service",
    "crates/ehdb-storage",
    "crates/ehdb-stream",
    "crates/ehdb-system",
    "crates/ehdb-transaction",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noetl/ehdb"
rust-version = "1.82"

[workspace.dependencies]
arrow-array = "53"
arrow-flight = "53"
arrow-ipc = "53"
arrow-schema = { version = "53", features = ["serde"] }
criterion = "0.5"
ehdb-catalog = { path = "crates/ehdb-catalog" }
ehdb-core = { path = "crates/ehdb-core" }
ehdb-reference = { path = "crates/ehdb-reference" }
ehdb-retrieval = { path = "crates/ehdb-retrieval" }
ehdb-service = { path = "crates/ehdb-service" }
ehdb-storage = { path = "crates/ehdb-storage" }
ehdb-stream = { path = "crates/ehdb-stream" }
ehdb-system = { path = "crates/ehdb-system" }
ehdb-transaction = { path = "crates/ehdb-transaction" }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"], default-features = false }
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost"], default-features = false }
tracing = "0.1"
# Execution-affinity ownership hash.  Pinned to the SAME major as
# `noetl-worker`'s `twox-hash = "1.6"` so EHDB's `shard_for_i64` is
# byte-identical to the worker/server `sharding::shard_for` — the two must
# agree on which replica owns an execution or single-writer coherence breaks.
twox-hash = "1.6"
