[package]
name = "ehdb-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ehdb-core.workspace = true
ehdb-storage.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "snapshots"
harness = false
