[package]
name = "ehdb-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EHDB L1 — networked change-feed delivery over the L0 Watch(shard,cursor) primitive: the per-shard writer's push transport to subscribers. noetl-internal only."

[dependencies]
ehdb-l0.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
