[package]
name = "ehdb-l0"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EHDB L0 — replicated object-store layer: immutable parts + ClickHouse-style meta-catalog + hot-local/durable-async tiering over a pluggable object store. noetl-internal only (fixed datasets)."

[dependencies]
ehdb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
# Execution-affinity partitioning hash, byte-identical to the worker/server
# `shard_for` and `ehdb-reference::affinity::shard_for_i64` (XxHash64 seed 0).
twox-hash.workspace = true

[dev-dependencies]
serde_json.workspace = true
