[package]
name = "ehdb-reference"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ehdb-catalog.workspace = true
ehdb-core.workspace = true
ehdb-retrieval.workspace = true
ehdb-storage.workspace = true
ehdb-stream.workspace = true
ehdb-system.workspace = true
ehdb-transaction.workspace = true
