[package]
name = "ehdb-reference"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
ehdb-catalog.workspace = true
ehdb-core.workspace = true
ehdb-retrieval.workspace = true
ehdb-storage.workspace = true
ehdb-stream.workspace = true
ehdb-system.workspace = true
ehdb-transaction.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "local_runtime"
harness = false
