[package]
name = "ehdb-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ehdb-core.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "local_store"
harness = false
