[package]
name = "ehdb-transaction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ehdb-core.workspace = true
ehdb-system.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
ehdb-catalog.workspace = true
ehdb-retrieval.workspace = true
ehdb-storage.workspace = true
ehdb-stream.workspace = true

[[bench]]
name = "reference_models"
harness = false
